# KusServer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake_config.cmake  cmake_target_switch.cmake  logs.txt  paste
.github/workflows/: test.yaml
2024_competition/: CMakeLists.txt  vcpkg_path.cmake
2024_competition/config/: database copy.dmp  database.dmp  database.pass  database.psql_db  database_test.dmp  database_true.dmp  path.conf
2024_competition/ddd/: database_old.dmp  database_test.dmp  database_true.dmp
2024_competition/sources/: sources.cmake
2024_competition/tests/: letter.txt
_dump/: date_time.cpp  date_time.hpp  date_time_handler.cpp  date_time_handler.hpp  kus_type_info.cpp  kus_type_info.hpp  transform.hpp
_dump/string/: separators.hpp  string_malloc.hpp  to_string.hpp
_unknown/config/: ontology_base_nodes.txt
_unknown/sources_main/: main.cpp
_unknown/sources_test/: command_handler.cpp  command_handler.hpp  core_loop.cpp  core_loop.hpp  cpp20.cpp  database.cpp  database_commands.cpp  pipe_example.cpp  variable.cpp
cmake/: flags.cmake  glob.cmake  libraries.cmake  setting_files.cmake  target.cmake
config/: database.dmp  database.psql_db  key_role.conf  main_settings.cfg  main_settings.conf  path.conf  url.conf
database_refactoring/: README.md
database_refactoring/devops/: KusManager.service  cmake_install.sh  remake.sh  rsa.bat  server_start.sh  zsh.sh
database_refactoring/tests/: postman_tests.json
develop/devops/: KusManager.service  make_servis.sh  remake.sh  server_restart.bat  server_restart.sh  server_start.sh
develop/tests/: example.dmp  journal.data  postman_tests.json
devops/: KusManager.service  autopush.bat  build.sh  default.conf  key.bat  linux_commands.txt  nginx.sh  push_to_git.bat  remake.sh  rsa.bat  rsa.sh  server_restart.bat  server_start.bat  server_start.sh  ssh.sh  ssl.bat  ssl.sh  zsh.sh
devops/ansible/: .zshrc  basic_setup.yml  cmake.sh  gcc.sh  inventory.yml  setup_dev_env.yml  vboxclient-clipboard.service  vcpkg.yml  vulkan
devops/environment/: 1_env_setup.md  2_send_key.bat  3_root_key.md  4_run_self_install.bat  README.md  _credentials.bat  credentials.bat  setup.sh
devops/maintain/: server_restart.bat  server_restart.sh
devops/other/: config  gcc.sh  linux_commands.txt  post_commands.sh  postsetup.sh
devops/setup/: server_setup.bat  zsh.sh
full_refactoring/config/: database.psql_db  main_settings.conf
kussystem_great_again/: code_style
kussystem_great_again/config/: database.dmp
kussystem_great_again/rrr/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  KusServer.sln  KusServer.vcxproj  KusServer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
kussystem_great_again/sources/: sources.cmake
master/: cmake_config.cmake  cmake_target_switch.cmake
master/data/: logs.txt
master/resource/: month.txt
master/scripts/: to_csv.sh
master/sources/: sources.cmake
master/tests/: example.dmp  plan_test.csv
new_variable_api/: CMakeLists.txt
new_variable_api/config/: db_credentials.txt
new_variable_api/sources_main/: test_main.cpp
new_variable_api/sources_test/: command_handler.cpp  core_loop.cpp  core_loop.hpp  fixture.hpp  string.cpp  variable.cpp  variable_commands.cpp
new_variable_api/tests_legacy/: quadratic-equation.cpp  while_empty.cpp
olymp_hotfixes/: CMakeLists.txt
olymp_hotfixes/devops/: KusManager.service  nginx.sh
olymp_hotfixes/tests/: example.dmp  plan_test.csv  postman_tests.json
resource/: attendance.tex  front.tex  header.tex  material.json  mesh.json  models.json  month.txt  plan.tex
resource/LaTex_Templates/: header.textemp
resource/engine_textures/: cat.dds  eye.dds  red_eye.dds  shape.dds  texture_paths.json
resource/objects_data/: game_objects.json  templates.json
result_handling/config/: database.dmp  url.conf
result_handling/sources/: sources.cmake
result_handling/tests/: postman_tests.json
scripts/: pdf_compile.sh
shaders/: compile.bat  shader.vert
shaders/compiled/: default_2d_vertex_shader.vert.spv  default_3d_vertex_shader.vert.spv
shaders/spirv/: default_2d_vertex_shader.vert  default_3d_vertex_shader.vert
simulator/: event.cpp  event.hpp  flow.cpp  flow.hpp  node.cpp  node.hpp  packet.hpp  scheduler.cpp  scheduler.hpp  simulator.cpp  simulator.hpp
sources/: main_app.cpp  main_test.cpp  sources.cmake
sources copy/: sources.cmake
sources copy/dumpster/: file_router.cpp  file_router.hpp  result_generator.cpp  role.cpp  role.hpp
sources copy/fold1/: eho.cpp
sources copy/test/: sources.cmake
sources/_test/: _setup.cmake  test_module.cpp  test_module.hpp
sources/code/: class.cpp  class.hpp  code_class.cpp  code_class.hpp  code_file.cpp  code_function.cpp  code_function.hpp  code_sources.cmake  function.cpp  function.hpp  function_array.cpp  function_array.hpp  generate_code.cpp  generate_code.hpp  static_variable.cpp
sources/core/: callback_register.cpp  callback_register.hpp  callback_storage.cpp  callback_storage.hpp  char_array_buffer.hpp  column_view.cpp  column_view.hpp  command.cpp  command.hpp  command_handler.cpp  command_handler.hpp  command_reader.cpp  command_reader.hpp  command_register.cpp  command_register.hpp  core.cpp  core.hpp  core_sources.cmake  date_time.hpp  date_time_handler.cpp  dump_manager.cpp  dump_manager.hpp  file_router.cpp  file_router.hpp  generate_code.cpp  generate_code.hpp  grade_handler.hpp  hash_map_by_str.hpp  holy_trinity.hpp  (+49 more)
sources_main/: main.cpp  test_main.cpp
sources_test/: _basic_checks.cpp  command_handler.hpp  engine.cpp  fixture.cpp  lifecycle_manager.cpp  num_prefix_tree.cpp  onto_web_test.cpp  path.cpp  path_storage.cpp  pipe_example.cpp  sources.cmake  string.cpp  table_print_test.cpp  variable.cpp
tests/: 1.py  example.dmp  example.populate  journal.data  letter.txt  letter_data.txt  plan_cpp.csv  plan_test.csv  postman_tests.json  quadratic-equation.cpp  source.cpp  user.data
tests_legacy/: 1.csv  empty.cpp  journal.data  letter_data.xlsx  plan_cpp.csv
winter_refactoring_2024/: .clang-format
(+2141 files in other folders)
